Fix jumpy box name

--- a/client/styles/importer.less
+++ b/client/styles/importer.less
@@ -182,7 +182,8 @@ md-dialog-content textarea[md-no-autogrow].md-input {
 
 .md-toolbar-tools .unlisted-lock {
   position: relative;
-  top: 4px;
+  top: 2px;
+  left: 3px;
 }
 
 /*******************************
